# paperbark

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOVER.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  planner.md  security-auditor.md
.github/scripts/: changelog-version.sh
.github/workflows/: auto-release.yml  changelog-check.yml  ci.yml  publish.yml
docs/: CONFIG.md  PROBES.md  ROADMAP.md  SOURCES.md
reference/: README.md  aggregate_logs.py  analyse_logs.py  filter_since.py  logs.sh  monitor-command.md  monitor_logs.sh  process_logs.py  search_logs.py
src/paperbark/: __init__.py  aggregate.py  analyse.py  animator.py  autoupdate.py  banner.py  cli.py  config.py  cursor.py  detect.py  dispatcher.py  duration.py  init.py  iteration.py  search.py
src/paperbark/formats/: __init__.py  json_keys.py  presets.py  regex.py
src/paperbark/probes/: __init__.py  _base.py  _bucket.py  _record.py  heartbeat.py  http.py  latency.py  panic.py  regex_bucket.py  severity.py
src/paperbark/sources/: __init__.py  cloudwatch.py  file.py  flyctl.py  kubectl.py  stdin.py  wrangler.py
tests/: test_aggregate.py  test_analyse.py  test_animator.py  test_autoupdate.py  test_banner.py  test_cli_analyse.py  test_cli_monitor.py  test_cli_search.py  test_config.py  test_cursor.py  test_detect.py  test_dispatcher.py  test_docs_config.py  test_docs_sources.py  test_duration.py  test_formats.py  test_init.py  test_iteration.py  test_probes_bucket.py  test_probes_config.py  test_probes_heartbeat.py  test_probes_http.py  test_probes_latency.py  test_probes_panic.py  test_probes_record.py  test_probes_regex_bucket.py  test_probes_severity.py  test_search.py  test_smoke.py  test_sources.py
