[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperbark"
version = "0.1.9"
description = "Configurable cross-source log capture, search, and analysis CLI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Good-Native" }]
keywords = ["logs", "observability", "cli", "fly-io", "monitoring"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.7",
    "tomli>=2.0; python_version < '3.11'",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
paperbark = "paperbark.cli:main"

[project.urls]
Homepage = "https://github.com/Good-Native/paperbark"
Issues = "https://github.com/Good-Native/paperbark/issues"
Changelog = "https://github.com/Good-Native/paperbark/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/paperbark"]

[tool.hatch.build.targets.sdist]
include = [
    "src/paperbark",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
]
ignore = [
    "S101",  # assert is fine in tests; module-level rule keeps it broad
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
files = ["src", "tests"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
source = ["paperbark"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
